# molmoact2

./: .gitmodules  README.md  pyproject.toml  run_droid.sh  run_sim.sh  run_yam.sh
examples/droid/: host_server_droid.py
examples/yam/: host_server_yam.py
experiments/: .gitignore  Dockerfile  README.md  pyproject.toml
experiments/launch_scripts/: data_constants.py  data_mixtures.py  eval.py  eval_molmo2.py  pretrain.py  sft.py  train_gui_pointing.py  train_lerobot.py
experiments/launch_scripts/lerobot_utils/: env.py  hf.py  stats.py  train_plan.py
experiments/lerobot/docs/source/: _toctree.yml  molmoact2.mdx
experiments/lerobot/src/lerobot/async_inference/: configs.py  helpers.py  policy_server.py  robot_client.py
experiments/lerobot/src/lerobot/policies/: __init__.py  factory.py
experiments/lerobot/src/lerobot/policies/molmoact2/: __init__.py  configuration_molmoact2.py  hf_backend.py  modeling_molmoact2.py  processor_molmoact2.py  prompt_utils.py
experiments/olmo/: config.py  depth_visualization.py  extra_tokens.py  html_utils.py  model_configs.py  token_layout.py  tokenizer.py  torch_util.py  torchcodec_utils.py  util.py
experiments/olmo/eval/: eval_utils.py  evaluators.py  inf_evaluator.py  loss_evaluator.py  model_evaluator.py  object_tracking_utils.py  point_tracking_utils.py  pointing_e2e_utils.py  vqa.py
experiments/olmo/hf_datasets/: android_control.py  mantis_instruct.py  plot_qa.py  vlm3r.py
experiments/olmo/hf_model/: convert_molmoact2_to_hf.py  modeling_molmoact2.py
experiments/olmo/nn/: action_expert.py  image_vit.py  llm.py  temporal_image_vit.py  temporal_vision_backbone.py  vision_backbone.py
experiments/olmo/preprocessing/: box_formatter.py  data_formatter.py  detect_counting_question.py  image_preprocessor.py  multicrop_preprocessor.py  multimodal_collator.py  multimodal_preprocessor.py  point_formatter.py  preprocessor_utils.py  sequence_length_utils.py
experiments/olmo/train/: checkpoint_loading.py  checkpointer.py  distributed_checkpointing.py  peft_compat.py  run_trainer.py  trainer.py  trainer_config.py
experiments/scripts/: dataset_visualize.py  download_datasets.py  extract_coin_clips.py  extract_ego4d_clips.py  generate_depth_annotation.py  inference_molmoact2.py  merge_lora.py  prepare_pretrained_model.py  run_open_loop_inference_lerobot.py  serve_policy.py  unified_demo.py
experiments/tests/: test_depth_loss_masking.py  test_depth_reasoning_policy.py  test_depth_token_helpers.py  test_generate_depth_annotation.py  test_hf_model_molmoact2.py  test_lerobot_eval_hf_import.py  test_molmoact2_config_cleanup.py  test_molmoact2_eval_parity.py  test_molmoact2_kv_collection.py  test_molmoact2_mixture_smoke.py  test_run_open_loop_inference_lerobot.py
sim_eval/inference/: client.py
