[project]
name = "molmoact2-policy-server"
version = "0.1.1"
description = "MolmoAct2 inference server (FastAPI)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers>=4.57,<4.58",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "huggingface-hub[cli]>=0.36",
    "hf-transfer>=0.1.8",
    "pillow>=10",
    "numpy>=1.26,<3",
    "einops>=0.7",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    "fastapi>=0.116",
    "uvicorn[standard]>=0.35",
    "json-numpy>=2.1.0",
    "mani-skill>=3.0.1; platform_machine == 'x86_64'",
    "tyro>=1.0.13",
    "imageio>=2.37.3",
    "transforms3d>=0.4.2",
    "gymnasium>=1.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'AMD64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'arm64'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'AMD64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'arm64'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'AMD64'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'arm64'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
