[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-molmo"
dynamic = ["version"]
readme = "README.md"
description = "Multimodal Open Language Model (Molmo)"
authors = [
    { name = "Allen Institute for Artificial Intelligence" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "absl-py",
    "cached_property",
    "fiddle >= 0.2.5",
    "numpy<2.3.0,>=2.0.0",
    "torch",
    "torchvision",
    "omegaconf",
    "rich",
    "boto3",
    "google-cloud-storage",
    "tokenizers",
    "packaging",
    "cached_path>=1.6.4",
    "transformers>=5.3.0,<6.0.0",
    "datasets",
    "huggingface_hub",
    "sentencepiece",
    "requests",
    "einops",
    "einops-exts",
    "tqdm",
    "gcsfs==2023.9.2",
    "accelerate",
    "imageio",
    "imageio[pyav]",
    "decord2",
    "av",
    "moviepy",
    "ffmpeg-python",
    "json_numpy",
    "peft>=0.18.0,<=0.18.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.4",
    "black>=23.1,<24.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-sphinx",
    "twine>=1.11.0",
    "setuptools<81.0.0,>=71.0.0",
    "func_timeout",
    "google-genai",
    "wheel",
    "build",
]
train = [
    "wandb",
    "beaker-py==1.36.2",
    "beaker-gantry==1.17.0",
    "click",
    "torchmetrics",
    "smashed[remote]>=0.21.1",
    "safetensors",
    "moviepy",
    "scikit-learn",
    "msgspec>=0.14.0",
    "openai",
    "python-Levenshtein",
    "editdistance"
]
serve = [
    "pydantic",
    "uvicorn",
    "gradio",
    "fastapi",
    "webdataset",
    "fasttext-numpy2",
    "cloudflared-tunnel",
]
all = [
    "ai2-molmo[dev,train,serve]",
]

[project.urls]
Homepage = "https://github.com/allenai/molmo"
Repository = "https://github.com/allenai/molmo"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["olmo*"]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "test_fixtures",
    "test_fixtures.*",
    "docs*",
    "scripts*",
    "olmo_tokenizer.*",
    "evaluation.*",
    "pretrain_data.*",
    "tmp_*",
    "inference.*",
]

[tool.setuptools.dynamic]
version = { attr = "olmo.version.VERSION" }
